[package]
name = "lawg"
description = "lawg is a Rust library designed to log and create log files with ease."
readme = "README.md"
repository = "https://github.com/vs-123/lawg"
documentation = "https://docs.rs/lawg/0.1.0/lawg/"
license = "MIT OR Apache-2.0"
keywords = ["logging", "loggers", "logger", "lawg"]
categories = ["development-tools::debuggings"]
homepage = "https://github.com/vs-123/lawg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"